// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button disabled prop sets 1`] = `
<button
  className="hPZwFI"
  disabled={true}
/>
`;

exports[`Button fullWidth prop sets width to 100% 1`] = `
<button
  className="bCPCeX"
/>
`;

exports[`Button renders 1`] = `
<button
  className="goZLpz"
/>
`;

exports[`Button size large sets height and font-size 1`] = `
<button
  className="aEtwN"
  size="large"
/>
`;

exports[`Button size medium sets height and font-size 1`] = `
<button
  className="goZLpz"
  size="medium"
/>
`;

exports[`Button size small sets height and font-size 1`] = `
<button
  className="crEzzY"
  size="small"
/>
`;

exports[`Button without disabled prop sets 1`] = `
<button
  className="goZLpz"
/>
`;
